<resources>
    <string name="app_name">骑士之家</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="agreement"><u>用户协议</u></string>
    <string name="hello_world">Hello world!</string>
    <string name="start_title">示例代码</string>
    <string name="base_function">基本功能</string>
    <string name="hud_title">HUD显示</string>
    <string name="extend_title">扩展功能</string>
    <string name="extend_navi_navi">自定义导航</string>
    <string name="navibar_title">路径规划</string>
    <string name="navi_car">驾车</string>
    <string name="navi_foot">步行</string>
    <string name="start_hud_navi">HUD显示</string>
    <string name="complex_function">综合展示</string>
    <string name="navi_empty_car">"驾   车"</string>
    <string name="navi_empty_foot">"步   行"</string>
    <string name="navi_start">"起    点"</string>
    <string name="navi_middle">途经点</string>
    <string name="navi_end">"终    点"</string>
    <string name="navi_strategy">"策    略"</string>
    <string name="navi_route">路径规划</string>
    <string name="navi_navi">模拟导航</string>
    <string name="start_navi_navi">实时导航</string>
    <string name="navi_strategy_speed">速度最快</string>
    <string name="navi_strategy_cost">避免收费</string>
    <string name="navi_strategy_distance">距离最短</string>
    <string name="navi_strategy_nohighway">不走高速快速路</string>
    <string name="navi_strategy_timenojam">时间最短且躲避拥堵</string>
    <string name="navi_strategy_costnojam">避免收费且躲避拥堵</string>
    <string name="theme_blue">经典蓝</string>
    <string name="theme_pink">可爱粉</string>
    <string name="theme_white">简约白</string>
    <string name="setting">设置</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="yes">"  是  "</string>
    <string name="no">"  否  "</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="daynightmode">"昼夜模式    "</string>
    <string name="deviationrecalculation">"偏航重算    "</string>
    <string name="jamrecalculation">"拥堵重算    "</string>
    <string name="trafficbroadcast">"交通播报    "</string>
    <string name="camerabroadcast">摄像头播报</string>
    <string name="screenon">"屏幕常亮    "</string>
    <string name="routeshow">线路展示</string>
    <string name="tapmap">点击地图设置</string>
    <string name="starttapmap">我的位置（可点击地图设置）</string>
    <string name="walkdescription">步行状态不可用</string>
    <string name="routeinfo">全程   --公里/--分钟    收费 --元</string>
    <string name="routeinfo_1">全程 </string>
    <string name="routeinfo_2">公里/</string>
    <string name="routeinfo_3">"分钟    收费"</string>
    <string name="routeinfo_4">元</string>
    <string name="routeinfo_default">--</string>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="mypoistion">我的位置</string>
    <string name="mappoistion">地图点选</string>
    <string name="positioninfo">位置信息</string>
    <string name="user_icon">用户icon</string>
    <string name="message_icon">信息icon</string>
    <string name="message_red_point">消息小红点</string>
    <string name="t1">向上拖动的图标</string>
    <string name="t2">关闭弹窗的图标</string>
    <string name="t3">站点类型</string>
    <string name="t4">营业状态</string>
    <string name="t5">距离站点位置</string>
    <string name="t6">可用电池数量</string>
    <string name="t7">导航图标</string>
    <string name="t8">导航</string>
    <string name="_0">0星</string>
    <string name="t9">暂无图片</string>
    <string name="t10">顶部消息图标</string>
    <string name="t11">客付图标</string>
    <string name="t12">骑士之家商城图标</string>
    <string name="hello_market">骑士之家商城</string>
    <string name="t13">定位图标</string>
    <string-array name="preference_values_tts_role">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>vixq</item>
        <item>vixf</item>
        <item>vixm</item>
        <item>vixl</item>
        <item>vixr</item>
        <item>vixyun</item>
        <item>vixk</item>
        <item>vixqa</item>
        <item>vixying</item>
        <item>vixx</item>
        <item>vinn</item>
        <item>vils</item>
    </string-array>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="buttonf_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="cd3">返回图标</string>
    <string name="myCar">我的电动车</string>
    <string name="had_no_car">您还没有绑定您的车辆\n请立即绑定</string>
    <string name="gray_car">灰色电动车图标</string>
    <string name="cd4">车辆图标，由后台返回</string>
    <string name="unbind">解绑</string>
    <string name="cd5">守护中</string>
    <string name="cd6">电子围栏图标</string>
    <string name="cd7">电子围栏</string>
    <string name="cd8">实时跟踪图标</string>
    <string name="cd9">实时跟踪</string>
    <string name="cd10">轨迹回放图标</string>
    <string name="cd11">轨迹回放</string>
    <string name="cd12">远程启动</string>
    <string name="cd13">远程启动</string>
    <string name="cd14">远程刹车</string>
    <string name="cd15">远程刹车</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="logout">确定要退出登录？</string>
</resources>