<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/alertdialog_style"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="#777777"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/success"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_left_bottom_corners_radius_10"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/sure"
            android:textColor="#429c4e"
            android:textSize="14sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#cccccc" />

        <TextView
            android:id="@+id/error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_right_bottom_corners_radius_10"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="#429c4e"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>